# applied-programming

./: .gitignore
Project_1_Java/Dice roller/src/: Calculator.java  Main.java  README.md
Project_2_C++/: Hangman.cpp  README.md  WordManager.cpp  main.cpp  tasks.json  wordManager.h
Project_3_R/: README.md  aggrigation.R  cleanup.R  dataProcessingnumberdate.R  datafiller.R  main.R
Project_3_R/dataOutput/: best_summary.csv  cumulative_summary.csv  customer_month_sum.csv  customer_summary.csv  growth_summary.csv  item_customer_summary.csv  item_summary.csv  monthly_sales.csv  monthly_summary.csv  number_data.csv  quarterly_sales.csv
Project_3_R/datasets/: large_data.csv  large_data.json  medium_data.csv  medium_data.json  small_data.csv  small_data.json
Project_4_Rust/: Cargo.toml  README.md
Project_4_Rust/input_folder/: file1.enc  test_file_3.txt
Project_4_Rust/output_folder/: file1.enc  file1.txt
Project_4_Rust/src/: crypto.rs  file_system.rs  main.rs
Project_5_Kotlin/: README.md
Project_5_Kotlin/untitled1/src/: CombatDashboard.kt  Main.kt  helpers.kt  monster tracker.kt
Project_6_Erlang/: README.md
Project_6_Erlang/data/: random_300_numbers.csv  random_numbers.csv
Project_6_Erlang/src/: fileconverter.beam  fileconverter.erl  number_toolkit.beam  number_toolkit.erl  transformations.beam  transformations.erl
hello world program/: README.md
