[package]
name = "file_encryptor"
version = "0.1.0"
edition = "2021"

[dependencies]
# AEAD (authenticated) encryption
chacha20poly1305 = "0.10"

# Randomness for keys / nonces
rand = "0.9.2"

# Logging
log = "0.4"
env_logger = "0.11.8"

# Filesystem utilities
walkdir = "2.3"
notify = "8.2"

# Helpful utilities
anyhow = "1.0"
base64 = "0.22.1"
